--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   ],
   "peerDependencies": {
     "react": "^16.0",
-    "react-native": "^0.51 || ^0.52 || ^0.53 || ^0.54 || ^0.55 || ^0.56 || ^0.57",
+    "react-native": "^0.51 || ^0.52 || ^0.53 || ^0.54 || ^0.55 || ^0.56 || ^0.57.0-rc.3",
     "prop-types": "^15.0 || ^16.0"
   },
   "devDependencies": {
